@@ -1,12 +1,14 @@
 BINUTILS_VERSION:=$(TARGET_TOOLCHAIN_BINUTILS_VERSION)
 BINUTILS_SOURCE:=binutils-$(BINUTILS_VERSION).tar.bz2
-BINUTILS_SITE:=http://ftp.gnu.org/gnu/binutils
+BINUTILS_STABLE_SITE:=http://ftp.gnu.org/gnu/binutils
+BINUTILS_DEVELOPER_SITE:=http://ftp.kernel.org/pub/linux/devel/binutils
 BINUTILS_DIR:=$(TARGET_TOOLCHAIN_DIR)/binutils-$(BINUTILS_VERSION)
 BINUTILS_MAKE_DIR:=$(TOOLCHAIN_DIR)/make/target/binutils
 
 
 $(DL_DIR)/$(BINUTILS_SOURCE):
-	wget -P $(DL_DIR) $(BINUTILS_SITE)/$(BINUTILS_SOURCE)
+	wget -P $(DL_DIR) $(BINUTILS_STABLE_SITE)/$(BINUTILS_SOURCE) || \
+	wget -P $(DL_DIR) $(BINUTILS_DEVELOPER_SITE)/$(BINUTILS_SOURCE)
 
 $(BINUTILS_DIR)/.unpacked: $(DL_DIR)/$(BINUTILS_SOURCE)
 	tar -C $(TARGET_TOOLCHAIN_DIR) $(VERBOSE) -xjf $(DL_DIR)/$(BINUTILS_SOURCE)
